<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Switcher für NetIO-230B</string>
    <string name="view_empty">kein Event angelegt</string>
    <string name="menu_config">Konfiguration</string>
    <string name="menu_start">Verbinden</string>
    <string name="menu_stop">Trennen</string>
    <string name="menu_eventNew">Event anlegen</string>
    <string name="menu_eventDel">Event löschen</string>
    <string name="menu_startEvents">Events starten</string>
    <string name="menu_stopEvents">Events anhalten</string>
    <string name="cfg_autostart">Autostart</string>
    <string name="cfg_autoconnect_short">Beim Start verbinden</string>
    <string name="cfg_autoconnect_long">Mit dieser Steckdose beim App-Start verbinden</string>
    <string name="cfg_autoevent_short">Events beim Start initialisieren</string>
    <string name="cfg_autoevent_long">Beim Start der App und beim Booten des Smartphones die aktiven und gültigen Events scharf schalten</string>
    <string name="cfg_reload_short">automatischer Reload</string>
    <string name="cfg_reload_long">Zeitspanne in Minuten, nach der die Schalterstellung automatisch ausgelesen wird (Minimum 1; 0=kein automatischer Reload)</string>
    
    <string name="cfg_steckdose">Steckdosenparameter</string>
    <string name="cfg_ip_short">Internet-Adresse</string>
    <string name="cfg_ip_long">Entweder lokale IP wie 192.168.1.60 oder von außen erreichbare
    	URL beispielsweise über dyndns.org.</string>
    <string name="cfg_username_short">Username</string>
    <string name="cfg_password_short">Passwort</string>
    <string name="cfg_kshell_short">KSHELL-Port</string>
    <string name="cfg_timeout_short">Timeout (in Sekunden)</string>
    <string name="cfg_timeout_long">Im lokalen Netz reicht 1 s, bei Zugriffen 
    	von außen per UMTS auf eine Dyndns-IP sollten es 5 bis 10 Sekunden sein.</string>
	<string name="event_name">Name</string>
	<string name="event_aktiv">aktiv</string>
	<string name="event_typ">Typ</string>
	<string name="event_output">Schalterstellung, genau vier Zeichen\n(0=aus, 1=ein, i=Interrupt, u=unverändert)</string>
	<string name="event_speichern">Speichern</string>
	<string name="event_test">Test</string>
	<string name="event_wlan">WLAN-Name</string>
	<string-array name="event_typenames">
		<item>WLAN betreten</item> 
		<item>WLAN verlassen</item>
		<item>Timer (während App)</item>
	</string-array>
	<string name="eventerror_name">Name darf nicht leer sein</string>
	<string name="eventerror_out1">Schalterstellung muss aus genau vier Zeichen bestehen</string>
	<string name="eventerror_out2">Schalterstellung darf nur 1, 0, i und u enthalten</string>
	<string name="eventerror_typ">Typ ungültig</string>
	<string name="eventerror_ext11">Extrafeld 1 darf nicht leer sein</string>
	<string name="eventerror_ext12">muss eine Ganzzahl ab 1 sein</string>
	<string name="eventerror_ext21">Extrafeld 2 darf nicht leer sein</string>
</resources>
