<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item 
    	android:id="@+id/itemEventNew" 
    	android:title="@string/menu_eventNew" 
    	android:icon="@drawable/ic_menu_add"
    />
    <item 
    	android:id="@+id/itemConfig" 
    	android:title="@string/menu_config" 
    	android:icon="@drawable/ic_menu_preferences"
    />
    <item 
    	android:id="@+id/itemStart" 
    	android:title="@string/menu_start" 
    	android:icon="@drawable/ic_menu_refresh"
    />
    <item 
    	android:id="@+id/itemStop" 
    	android:title="@string/menu_stop" 
    	android:icon="@drawable/ic_menu_close_clear_cancel"
    />
    <item 
    	android:id="@+id/itemStartEvents" 
    	android:title="@string/menu_startEvents" 
    	android:icon="@drawable/ic_media_play"
    />
        <item 
    	android:id="@+id/itemStopEvents" 
    	android:title="@string/menu_stopEvents" 
    	android:icon="@drawable/ic_media_pause"
    />
    
</menu>
